z-index & bootstrap4 - fixes #2967

--- a/web/pimcore/static6/css/editmode.css
+++ b/web/pimcore/static6/css/editmode.css
@@ -386,6 +386,7 @@
 
 .pimcore_areablock_toolbar.x-layer {
     position: fixed !important;
+    z-index: 10000 !important;
 }
 
 .pimcore_areablock_toolbar .x-btn-default-small {
